# food103seg-calories

./: .dockerignore  .dvcignore  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  Dockerfile.backend  Dockerfile.frontend  README.md  cloudbuild.yaml  data.dvc  docker-compose.yml  favicon.py  index.html  mkdocs.yaml  objects.inv  project_structure.txt  pyproject.toml  report.html  requirements.txt  requirements_dev.txt  tasks.py  train.dockerfile  wandb_runner.py
.dvc/: config
.github/: dependabot.yaml
.github/workflows/: ci.yml  data-changes.yaml  model-deploy.yml
app/: service.py
configs/: conf.yaml  config.yaml  wandb_sweep.yaml
configs/dataset/: default.yaml
configs/model/: default.yaml
configs/outputs/2025-07-02/00-52-11/.hydra/: config.yaml  hydra.yaml
configs/outputs/2025-07-02/00-52-11/wandb/: latest-run
configs/outputs/2025-07-02/00-52-11/wandb/run-20250702_005212-cajr7qmy/: run-cajr7qmy.wandb
configs/outputs/2025-07-02/00-52-11/wandb/run-20250702_005212-cajr7qmy/files/: config.yaml  requirements.txt  wandb-metadata.json
configs/outputs/2025-07-02/00-53-06/.hydra/: config.yaml  hydra.yaml
configs/outputs/2025-07-02/00-53-06/wandb/: latest-run
configs/outputs/2025-07-02/00-53-06/wandb/run-20250702_005306-otpr884a/: run-otpr884a.wandb
configs/outputs/2025-07-02/00-53-06/wandb/run-20250702_005306-otpr884a/files/: config.yaml  wandb-metadata.json  wandb-summary.json
configs/outputs/2025-07-02/22-43-00/.hydra/: config.yaml  hydra.yaml
configs/outputs/2025-07-02/22-43-00/wandb/: latest-run
configs/outputs/2025-07-02/22-43-00/wandb/run-20250702_224301-9221r2fw/files/: requirements.txt  wandb-metadata.json
configs/outputs/2025-07-04/21-10-21/.hydra/: config.yaml  hydra.yaml
configs/outputs/2025-07-04/21-13-32/.hydra/: hydra.yaml
configs/outputs/2025-07-04/21-14-57/.hydra/: hydra.yaml
configs/outputs/2025-07-04/21-15-34/.hydra/: hydra.yaml
configs/outputs/2025-07-04/21-19-37/.hydra/: config.yaml  hydra.yaml
configs/outputs/2025-07-04/21-25-22/.hydra/: hydra.yaml
configs/outputs/2025-07-04/21-31-48/.hydra/: hydra.yaml
configs/outputs/2025-07-04/21-53-52/.hydra/: hydra.yaml
configs/outputs/2025-07-04/22-00-46/.hydra/: config.yaml  hydra.yaml
docs/: index.md  installation.md  structure.md
docs/source/: data.md  loss.md  main.md  model.md  training.md
foodenv/: pyvenv.cfg
frontend/: frontend.py  requirements_frontend.txt
installation/: index.html
notebooks/: experiment.ipynb
reports/: README.md  report.html
saved/: models.dvc
saved/model_bentoml/: saved_model.py
search/: search_index.json
source/data/: index.html
source/loss/: index.html
source/main/: index.html
source/model/: index.html
source/training/: index.html
src/: data.py  frontend.py  loss.py  main.py  model.py  pyproject.toml  train.py
src/app/: bentoml.py  bentoml.yaml  bentoml_setup.py  fast_api.py  frontend.dockerfile  frontend.py  service.py
src/segmentation/: bentoml.yaml  data.py  fast_api.py  loss.py  main.py  model.py  saved_model.py  service.py  train.py  visualize.py
src/tests/: __init__.py  test_data.py  test_data1.py  test_model.py  test_training.py
src/tests/integrationtests/: test_apis.py
src/tests/tests_integration/: api_test.py  api_testing.py  locustfile.py
src/tests/tests_unit/: test_data1.py  test_model.py  test_train.py  test_training.py
src/tests/unit_tests/: test_data.py
structure/: index.html
