[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sensor-behaviour"
version = "0.1.0"
description = "Food segmentation application with FastAPI and Streamlit"
authors = [{name = "Your Name", email = "your.email@example.com"}]
requires-python = ">=3.11"

dependencies = [
    # Your existing dependencies
    "torch==2.7.0",
    "torchvision==0.22.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "tqdm==4.67.1",
    "loguru==0.7.3",
    "omegaconf==2.3.0",
    "fastapi==0.115.12",
    "uvicorn==0.34.2",
    "streamlit>=1.46.1",
    "python-multipart>=0.0.20",
    "requests>=2.31.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
training = [
    # Your training dependencies
]
dev = [
    # Your dev dependencies
]
docker = [
    "supervisor>=4.2.0",
]


[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "saved/",
    "pyproject.toml",
    "README.md"
]
